--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h3>Social Media Ads</h3>
             <div class="grid-ads">
                 <div class="portfolio-item square">
-                    <iframe src="https://www.youtube.com/embed/SjgB9XPhTqI?si=uZy4J9jixNYuQjd6" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://youtube.com/embed/6uinajX1Fzw?si=SWihlCqRV2uDjqIX" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="portfolio-item square">
                     <iframe src="https://www.youtube.com/embed/SjgB9XPhTqI?si=uZy4J9jixNYuQjd6" frameborder="0" allowfullscreen></iframe>
