--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h3>Promotional Video</h3>
             <div class="grid-promo">
                 <div class="portfolio-item wide">
-                    <iframe src="https://youtu.be/n0LK9XV0oOk?si=fvo-su2Ph9H4N2Ve" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube-nocookie.com/embed/XPQjKOEbpFo?si=WZwrqP6xjp5Prp4S" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="portfolio-item wide">
                     <iframe src="https://www.youtube-nocookie.com/embed/XPQjKOEbpFo?si=WZwrqP6xjp5Prp4S" frameborder="0" allowfullscreen></iframe>
