Implement typewriter effect for name and enhance styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <header class="hero" id="home">
         <div class="hero-content">
             <h1>HELLO I'M <span class="wave-emoji">👋</span></h1>
-            <h1>MD. <span class="accent">REDOAN</span></h1>
+            <h1>
+                <span id="typewriter" class="accent"></span>
+            </h1>
+
             <p>Professional video editor and graphic designer specialized in high-impact visual content</p>
             <button class="btn-hire" onclick="location.href='#portfolio'">View Portfolio</button>
         </div>
@@ -61,7 +64,7 @@
             <p>
                 I’m a highly experienced Motion Graphics Designer and Video Editor with over 5+ years of professional expertise in creating premium visual content for digital and commercial platforms.
                 I specialize in high-impact motion graphics, cinematic video editing, and visually compelling storytelling that strengthens brand identity, boosts audience engagement, and supports clear marketing objectives.
-                My skill set includes advanced proficiency in Adobe After Effects, Adobe Premiere Pro, Adobe Photoshop, and Adobe Illustrator, along with the strategic use of cutting-edge AI tools for both video and image production to enhance efficiency and creative quality.
+                My skill set includes advanced proficiency in <span class="accent">Adobe After Effects, Adobe Premiere Pro, Adobe Photoshop, and Adobe Illustrator</span>, along with the strategic use of cutting-edge AI tools for both video and image production to enhance efficiency and creative quality.
                 I have extensive experience collaborating with international clients across global markets and am trusted by US-based and overseas companies for my structured workflow, clear communication, consistent on-time delivery, and ability to transform complex concepts into polished, high-performing visual narratives that deliver measurable brand value.
             </p>
         </div>
