--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <link rel="icon" type="image/png" href="Favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <script>document.documentElement.classList.add('js');</script>
+
 </head>
 <body>
     <nav>
