Add hover effects to expert cards and update styling for portfolio section

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
             <h2>My Expert <span>Areas</span></h2>
         </div>
         <div class="expert-grid">
-            <div class="expert-card">
+            <div class="expert-card" data-hover>
                 <img src="MotionGraphics.png" alt="Motion Graphics">
                 <h4>Motion Graphics</h4>
                 <p>Expert In Creating High-Quality, Professional Motion Visuals With Clean And Impactful Storytelling</p>
             </div>
-            <div class="expert-card">
+            <div class="expert-card" data-hover>
                 <img src="AIExpert.png" alt="AI Expert">
                 <h4>AI Expert</h4>
                 <p>Expert In Delivering High-Quality AI-Powered Visuals, Videos, And Creative Solutions</p>
             </div>
-            <div class="expert-card">
+            <div class="expert-card" data-hover>
                 <img src="VideoEditing.png" alt="Video Editing">
                 <h4>Video Editing</h4>
                 <p>Skilled In Producing Polished, Engaging Videos With Smooth Transitions And A Professional Finish</p>
             </div>
-            <div class="expert-card">
+            <div class="expert-card" data-hover>
                 <img src="GraphicsDesign.png" alt="Graphics Design">
                 <h4>Graphics Design</h4>
                 <p>Professional In Creating Clean, Modern, And Visually Strong Designs That Support Brand Identity</p>
