--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Md. Redoan | Expert video editor and graphic designer</title>
+    <title>Md. Redoan | Expert video editor & motion graphic designer</title>
     
     <link rel="stylesheet" href="style.css">
     
@@ -43,7 +43,7 @@
                 <span id="typewriter" class="accent"></span>
             </h1>
 
-            <p>Professional video editor and graphic designer specialized in high-impact visual content</p>
+            <p>Professional Video Editor and Motion Graphic Designer with a focus on high-impact,results-driven visual content</p>
             <button class="btn-hire" onclick="location.href='#portfolio'">View Portfolio</button>
         </div>
         <div class="hero-image">
