--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span id="typewriter" class="accent"></span>
             </h1>
 
-            <p>Professional Video Editor and Motion Graphic Designer with a focus on high-impact,results-driven visual content</p>
+            <p>Professional Video Editor and Motion Graphic Designer with a focus on high-impact results-driven visual content.</p>
             <button class="btn-hire" onclick="location.href='#portfolio'">View Portfolio</button>
         </div>
         <div class="hero-image">
