--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
             <h3>Promotional Video</h3>
             <div class="grid-promo">
                 <div class="portfolio-item wide">
-                    <iframe src="https://www.youtube-nocookie.com/embed/n0LK9XV0oOk?si=WEil-vRwoPmO4eSw" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/n0LK9XV0oOk?si=OoHJmxiSYETYN-wh" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="portfolio-item wide">
-                    <iframe src="https://www.youtube-nocookie.com/embed/sZwXZF3l9a4?si=S69HCkrj9uan59O8" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/sZwXZF3l9a4?si=DZIJG2xHzRn_hh0m" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="portfolio-item wide">
-                    <iframe src="https://www.youtube-nocookie.com/embed/sUUoQXXHCBA" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/sUUoQXXHCBA?si=iSPAm_cqle2l7KMM" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="portfolio-item wide">
-                    <iframe src="https://www.youtube-nocookie.com/embed/fe44qk2VWY8" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Ht44OpUji70?si=pa_dKgdnjgDPZVeK" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
